--- a/mobile/src/main/res/layout/content_set_system.xml
+++ b/mobile/src/main/res/layout/content_set_system.xml
@@ -89,7 +89,7 @@
         android:id="@+id/sv_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        st:titleEx="嘟嘟桌面"
+        st:titleEx="关于嘟嘟桌面"
         st:type="buttonB" />
 
     <View style="@style/Interval" />
@@ -99,7 +99,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
-        android:text="高大上的系统设置（通常被车机厂商隐藏的功能）"
+        android:text="系统设置快捷入口"
         android:textColor="@color/colorPrimary"
         android:textSize="14sp" />
 
