--- a/mobile/src/main/res/layout/dialog_progress.xml
+++ b/mobile/src/main/res/layout/dialog_progress.xml
@@ -2,24 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="match_parent"
     android:background="?android:selectableItemBackground"
     android:orientation="vertical"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
-    tools:ignore="HardcodedText">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:text="下载中...." />
+    tools:ignore="HardcodedText,SpUsage">
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="20dp"
         android:max="100" />
 </LinearLayout>
