--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -77,6 +77,14 @@
             app:layout_widthPercent="100%h" />
 
         <ImageView
+            android:id="@+id/iv_mount"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            android:visibility="gone"
+            app:layout_widthPercent="100%h" />
+
+        <ImageView
             android:id="@+id/iv_set"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
