--- a/mobile/src/main/res/layout/dialog_input.xml
+++ b/mobile/src/main/res/layout/dialog_input.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent"
     android:background="?android:selectableItemBackground"
     android:orientation="vertical"
-    android:paddingEnd="10dp"
-    android:paddingStart="10dp">
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
     <EditText
         android:id="@+id/et_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30sp" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
