--- a/heise/src/main/res/drawable/theme_amap_ban.xml
+++ b/heise/src/main/res/drawable/theme_amap_ban.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#00000000" />
+    <gradient
+        android:angle="270"
+        android:endColor="#404751"
+        android:startColor="#505865" />
+    <corners android:radius="5dp" />
 </shape>
