--- a/heise/src/main/res/drawable/theme_launcher_bg.xml
+++ b/heise/src/main/res/drawable/theme_launcher_bg.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#0c1414" />
+    <gradient
+        android:angle="225"
+        android:endColor="#29313e"
+        android:startColor="#313f5c" />
 </shape>
