--- a/heise/src/main/res/drawable/theme_obd_cell_bg.xml
+++ b/heise/src/main/res/drawable/theme_obd_cell_bg.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#10ffffff" />
+    <gradient
+        android:angle="270"
+        android:endColor="#454f62"
+        android:startColor="#646f81" />
+    <corners android:radius="5dp" />
+    <stroke
+        android:width="0.5dp"
+        android:color="#666f80" />
 </shape>
