--- a/heise/src/main/res/drawable/theme_pager_postion.xml
+++ b/heise/src/main/res/drawable/theme_pager_postion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#9b9b9b" />
+    <solid android:color="#9da4ac" />
     <corners android:radius="5dp" />
 </shape>
