皮肤导入功能

--- a/mobile/src/main/res/layout/content_set_theme.xml
+++ b/mobile/src/main/res/layout/content_set_theme.xml
@@ -51,8 +51,8 @@
         android:id="@+id/sv_load_skin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        st:summary="请将皮肤文件放到SD卡duduLauncher文件夹"
-        st:titleEx="加载皮肤"
+        st:summary="请将皮肤文件放到SD卡duduLauncher/skin文件夹,最多可添加100个皮肤"
+        st:titleEx="同步皮肤"
         st:type="buttonB" />
 
     <View style="@style/Interval" />
