--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -33,7 +33,7 @@
                     <com.wow.carlauncher.common.view.CustomImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@mipmap/music_dlogo"
+                        android:src="@drawable/theme_music_dcover"
                         app:ccircle="true" />
 
                     <TextView
