--- a/mobile/src/main/res/layout/content_driving_blue.xml
+++ b/mobile/src/main/res/layout/content_driving_blue.xml
@@ -274,7 +274,7 @@
                         android:layout_centerInParent="true"
                         android:contentDescription="@string/app_name"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/music_dlogo"
+                        android:src="@drawable/theme_music_dcover"
                         app:layout_heightPercent="85%h"
                         app:layout_widthPercent="85%h"
                         app:radius="6dp" />
