--- a/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
@@ -17,7 +17,7 @@
             android:layout_height="0dp"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:src="@mipmap/music_dlogo"
+            android:src="@drawable/theme_music_dcover"
             app:layout_heightPercent="85%h"
             app:layout_widthPercent="85%h"
             app:radius="6dp" />
