--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -55,7 +55,7 @@
                     android:layout_centerInParent="true"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/music_dlogo"
+                    android:src="@drawable/theme_music_dcover"
                     app:layout_heightPercent="100%h"
                     app:layout_widthPercent="100%h"
                     app:radius="6dp" />
