--- a/mobile/src/main/res/layout/popup_console.xml
+++ b/mobile/src/main/res/layout/popup_console.xml
@@ -147,7 +147,7 @@
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/music_dlogo"
+                android:src="@drawable/theme_music_dcover"
                 app:layout_heightPercent="100%h"
                 app:layout_widthPercent="100%h"
                 app:radius="5dp" />
