--- a/chunhei/src/main/res/values/colors.xml
+++ b/chunhei/src/main/res/values/colors.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--插件标题颜色-->
     <color name="theme_item_title">#fbfbfb</color>
+    <!--音乐标题颜色-->
     <color name="theme_music_title">#fbfbfb</color>
+    <!--音乐歌手颜色,歌词-->
     <color name="theme_music_singer">#818796</color>
-
+    <!--限速文字颜色-->
     <color name="theme_amap_xiansu">#fbfbfb</color>
+    <!--剩余里程文字颜色-->
     <color name="theme_amap_shengyulicheng">#fbfbfb</color>
-
+    <!--天气布局1相关的颜色-->
     <color name="theme_weather_1_tianqi">#9ba1a9</color>
     <color name="theme_weather_1_wendu">#697185</color>
     <color name="theme_weather_1_city">#697185</color>
     <color name="theme_weather_1_name">#9ba1a9</color>
     <color name="theme_weather_1_value">#333e54</color>
-
+    <!--天气布局2相关的颜色-->
     <color name="theme_weather_2_wendu">#fbfbfb</color>
     <color name="theme_weather_2_tianqi">#fbfbfb</color>
     <color name="theme_weather_2_name">#848a95</color>
     <color name="theme_weather_2_value">#aaa</color>
-
+    <!--obd信息颜色-->
     <color name="theme_obd_info">#fbfbfb</color>
     <color name="theme_obd_msg">#adadad</color>
-
+    <!--胎压信息颜色-->
     <color name="theme_taiya_info">#fbfbfb</color>
     <color name="theme_taiya_msg">#adadad</color>
-
+    <!--时间信息颜色-->
     <color name="theme_time_shijian">#fbfbfb</color>
     <color name="theme_time_week">#adadad</color>
     <color name="theme_time_day">#adadad</color>
     <color name="theme_time_lunar">#adadad</color>
-
+    <!--dock的标题颜色-->
     <color name="theme_dock_title">#fbfbfb</color>
+    <!--APP列表标题颜色-->
     <color name="theme_app_name">#adadad</color>
-
+    <!--托盘时间颜色-->
     <color name="theme_prompt_time">#fbfbfb</color>
-
+    <!--控制台相关颜色-->
     <color name="theme_console_appname">#fbfbfb</color>
     <color name="theme_console_time">#fbfbfb</color>
     <color name="theme_console_music_title">#fbfbfb</color>
-
+    <!--语音助手相关颜色-->
     <color name="theme_voice_message">#fbfbfb</color>
 </resources>
