--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -30,13 +30,11 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <com.wow.carlauncher.common.view.CustomImageView
+                    <com.wow.carlauncher.common.view.CircleImageView
                         android:id="@+id/iv_user_pic"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/theme_music_dcover"
-                        app:ccircle="true" />
+                        android:src="@drawable/theme_music_dcover" />
 
                     <TextView
                         android:id="@+id/tv_nickname"
