--- a/mobile/src/main/res/values/attrs.xml
+++ b/mobile/src/main/res/values/attrs.xml
@@ -28,8 +28,11 @@
         <attr name="left_bottom_radius" format="dimension" />
     </declare-styleable>
 
-    <declare-styleable name="CustomImageView">
-        <attr name="ccircle" format="boolean" />
-        <attr name="cradius" format="dimension" />
+    <declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+        <attr name="civ_circle_background_color" format="color" />
     </declare-styleable>
 </resources>
