--- a/mobile/src/main/res/layout/content_l_dock.xml
+++ b/mobile/src/main/res/layout/content_l_dock.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ll_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="top|center_horizontal"
     android:orientation="horizontal"
     tools:ignore="HardcodedText,RtlHardcoded">
 
